// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Page: User Create Page should disable submit when pristine 1`] = `
<Button
  disabled={true}
  submit={true}
  variant="primary"
>
  Add User
</Button>
`;

exports[`Page: User Create Page should render correctly by default 1`] = `
<Page
  breadcrumbAction={
    Object {
      "Component": [Function],
      "content": "Users",
      "to": "/account/users",
    }
  }
  title="Invite User"
>
  <Panel.LEGACY>
    <form
      onSubmit={[Function]}
    >
      <Panel.LEGACY.Section>
        <Stack>
          <Field
            component={[Function]}
            helpText="An invitation will be sent to the email address you supply"
            label="Email address"
            name="email"
            normalize={[Function]}
            validate={
              Array [
                [Function],
                [Function],
              ]
            }
          />
          <Field
            allowSubaccountAssignment={false}
            component={
              Object {
                "$$typeof": Symbol(react.memo),
                "WrappedComponent": [Function],
                "compare": null,
                "displayName": "Connect(RoleRadioGroup)",
                "type": [Function],
              }
            }
            name="access"
          />
        </Stack>
      </Panel.LEGACY.Section>
      <Panel.LEGACY.Section>
        <Button
          disabled={false}
          submit={true}
          variant="primary"
        >
          Add User
        </Button>
      </Panel.LEGACY.Section>
    </form>
  </Panel.LEGACY>
</Page>
`;

exports[`Page: User Create Page should update submit button when submitting 1`] = `
<Button
  disabled={true}
  submit={true}
  variant="primary"
>
  Loading
</Button>
`;
